--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
     <description>A very simple unit testing framework written in Java.</description>
     <developers>
         <developer>
-            <id>jeszy</id>
-            <name>Péter Jeszenszky</name>
-            <email>jeszenszky.peter@inf.unideb.hu</email>
+            <id>smahfoudh</id>
+            <name>Skander Mahfoudh</name>
+            <email>skan.mh@gmail.com</email>
             <organization>Faculty of Informatics, University of Debrecen</organization>
             <organizationUrl>http://www.inf.unideb.hu/</organizationUrl>
         </developer>
@@ -38,12 +38,91 @@
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>3.1.2</version>
                 <dependencies>
+
+                    <dependency>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                    <version>1.7.25</version>
+                    <scope>compile</scope>
+                    </dependency>
+
                     <dependency>
                         <groupId>com.puppycrawl.tools</groupId>
                         <artifactId>checkstyle</artifactId>
                         <version>10.0</version>
                     </dependency>
                 </dependencies>
+
+                <profiles>
+                <profile>
+                    <id>jul</id>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.slf4j</groupId>
+                            <artifactId>slf4j-jdk14</artifactId>
+                            <version>1.7.25</version>
+                            <scope>runtime</scope>
+                        </dependency>
+                    </dependencies>
+                </profile>
+                <profile>
+                    <id>nop</id>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.slf4j</groupId>
+                            <artifactId>slf4j-nop</artifactId>
+                            <version>1.7.25</version>
+                            <scope>runtime</scope>
+                        </dependency>
+                    </dependencies>
+                </profile>
+                <profile>
+                    <id>simple</id>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.slf4j</groupId>
+                            <artifactId>slf4j-simple</artifactId>
+                            <version>1.7.25</version>
+                            <scope>runtime</scope>
+                        </dependency>
+                    </dependencies>
+                </profile>
+                <profile>
+                    <id>tinylog</id>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.tinylog</groupId>
+                            <artifactId>tinylog-api</artifactId>
+                            <version>2.4.1</version>
+                            <scope>runtime</scope>
+                        </dependency>
+                        <dependency>
+                            <groupId>org.tinylog</groupId>
+                            <artifactId>tinylog-impl</artifactId>
+                            <version>2.4.1</version>
+                            <scope>runtime</scope>
+                        </dependency>
+                        <dependency>
+                            <groupId>org.tinylog</groupId>
+                            <artifactId>slf4j-tinylog</artifactId>
+                            <version>2.4.1</version>
+                            <scope>runtime</scope>
+                        </dependency>
+                    </dependencies>
+                </profile>
+                <profile>
+                    <id>logback</id>
+                    <dependencies>
+                        <dependency>
+                            <groupId>ch.qos.logback</groupId>
+                            <artifactId>logback-classic</artifactId>
+                            <version>1.2.3</version>
+                            <scope>runtime</scope>
+                        </dependency>
+                    </dependencies>
+                </profile>
+                </profiles>
+
             </plugin>
         </plugins>
     </build>
